chore(spring-zeebe) bump version of spring zeebe to 8.5.7 (#2815)
* chore(spring-zeebe) bump version of spring zeebe to 8.5.7

* chore(spring-zeebe) bump version of spring zeebe to 8.5.7 (necessary changes in the code had to be made)

---------

Co-authored-by: Simon <sbuettner@users.noreply.github.com>